@@ -30,7 +30,6 @@ Filter file syntax documented in htdocs/config-filter.html
 
 
 import os
-import popen2
 import re
 import string
 import sys
@@ -1038,53 +1037,29 @@ class FilterParser:
             # A match is found if the command exits with a zero exit
             # status.
             if source == 'pipe-headers' and msg_headers:
-                cmd = popen2.Popen3(match, 1, bufsize=-1)
-                cmdout, cmdin, cmderr = cmd.fromchild, cmd.tochild, cmd.childerr
-                cmdin.write(msg_headers)
-                cmdin.flush()
-                cmdin.close()
-                err = cmderr.read().strip()
-                cmderr.close()
-                out = cmdout.read().strip()
-                cmdout.close()
-                r = cmd.wait()
+                (r, out, err) = Util.runcmd(match, msg_headers)
+
                 if r == 0:
                     found_match = 1
                     break
-                else:
-                    # non-zero exit status
-                    if os.WIFEXITED(r):
-                        pass
-                    # raise an exception if the process exited due to
-                    # a signal.
-                    elif os.WIFSIGNALED(r):
-                        raise Error, 'command "%s" abnormal exit signal %s (%s)' \
-                              % (match, os.WTERMSIG(r), err or '')
+                # raise an exception if the process exited due to
+                # a signal.
+                elif r < 0:
+                    raise Error('command "%s" abnormal exit signal %s (%s)' %
+                                (match, -r, err.strip()))
             # A match is found if the command exits with a zero exit
             # status.
             if source == 'pipe' and msg_body and msg_headers:
-                cmd = popen2.Popen3(match, 1, bufsize=-1)
-                cmdout, cmdin, cmderr = cmd.fromchild, cmd.tochild, cmd.childerr
-                cmdin.write(msg_headers + '\n' + msg_body)
-                cmdin.flush()
-                cmdin.close()
-                err = cmderr.read().strip()
-                cmderr.close()
-                out = cmdout.read().strip()
-                cmdout.close()
-                r = cmd.wait()
+                (r, out, err) = Util.runcmd(match, msg_headers + '\n' +
+                                            msg_body)
                 if r == 0:
                     found_match = 1
                     break
-                else:
-                    # non-zero exit status
-                    if os.WIFEXITED(r):
-                        pass
-                    # raise an exception if the process exited due to
-                    # a signal.
-                    elif os.WIFSIGNALED(r):
-                        raise Error, 'command "%s" abnormal exit signal %s (%s)' \
-                              % (match, os.WTERMSIG(r), err or '')
+                # raise an exception if the process exited due to
+                # a signal.
+                elif r < 0:
+                    raise Error('command "%s" abnormal exit signal %s (%s)' %
+                                (match, -r, err.strip()))
             if source in ('body', 'headers'):
                 if source == 'body' and msg_body:
                     content = msg_body
